# python-hwpx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  README.md  README_EN.md  SECURITY.md  llms.txt  package.json  pnpm-lock.yaml  pyproject.toml  verdicts_v2.jsonl
.claude/skills/hwpx-report-template-edit/: SKILL.md
.github/: ACTION_PINNING.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  dependency-review.yml  gh-pages.yml  release.yml  tests.yml
DevDoc/: hwpxskill_gap_audit.md  license-alignment-audit.md  license-metadata-policy.md  template-automation-regression-suite.md
docs/: 2026-06-02-hwpx-builder-design.md  2026-06-23-visualcomplete-implementation-plan.md  agent-doc-authoring-roadmap.md  api_reference.md  blind-eval-fixture-contract.md  changelog.md  conf.py  corpus-metrics-history.json  corpus-metrics.md  editor-fixes-2026-02-16.md  examples.md  faq.md  hancom-com-oracle.md  index.md  installation.md  migration-4.0.md  owpml-deviations.md  quickstart.md  requirements.txt  safe-write-contract.md  schema-freeze.md  schema-overview.md  stable-api.md  support-matrix.md  usage.md  visual-qa-fixture-annotation.md
docs/_build/html/: faq.html  (+12 more)
docs/_static/: badge-hancom-open.json
docs/cctv_daily_report/: ARCHITECTURE.md  PLAN.md  REFACTORING.md  RESULT.md  feature_docs.md
docs/internals/: README.md  lineseg.md  memo-structure.md  opc-packaging.md  oracle-limits.md  toc-dirty.md  units.md
examples/: FormattingShowcase.hwpx  Skeleton.hwpx  build_from_document_plan.py  build_release_checklist.py  compose_exam.py  extract_text.py  find_objects.py  fit_aware_mail_merge.py
m4p0/: README.md  p0_com_check.ps1  redline_synth.hwpx  redline_with_comments.hwpx
pia_summary/: .gitignore  README.md  docker-compose.yml  prompts.py
pia_summary/minio_url_guide/: RESULTS.md  TUTORIAL.md  console_url_pitfall.md  example_basic.py  example_external_node.py
pia_summary/tests/: README.md  _common.py  _result.py  _system.py  _vram.py  bench_concurrency.py  bench_docker_vram.py  bench_max_tokens.py  bench_ramp.py  sanity_check.py
scripts/: analyze_template.py  build_openrate_negatives.py  check_public_hygiene.py  check_typing_generics_scope.py  conformance_corpus_build.py  corpus_authoring_quality.py  corpus_byte_patch_identity.py  corpus_formfill_differential.py  corpus_open_rate.py  corpus_pii_leak_sweep.py  corpus_toc_verify.py  exam_profile_a_form.py  exam_spike_keep_together.py  generate_openrate_corpus.py  hancom_com_open_verify.ps1  hancom_open_rate.ps1  hancom_render_batch.ps1  hancom_render_measure.py  hancom_render_soak.py  hancom_render_worker.py  m9_fiton_spike.py  m9_p0_box_render_probe.ps1  m9_p0_mac_spike.py  m9_p0_prepare_box.py  m9_p0_redline_text_probe.ps1  openrate_box_filelist.py  rhwp_triage.py  visual_qa_measure.py
scripts/office/: pack.py  unpack.py
scripts/visualcomplete-baseline/: README.md  hancom_render.ps1  lineseg_toggle.py  make_injected_fixture.py  mutate.py  overlap_detect.py  rasterize_score.py  run_pairs.py
shared/hwpx/: HWPX_STACK_ACTION_MAP.md  HWPX_STACK_BACKLOG.md  HWPX_STACK_BENCHMARK_CANDIDATES.md  HWPX_STACK_COMPATIBILITY.md  HWPX_STACK_COMPATIBILITY_CHECKLIST.md  HWPX_STACK_MASTER_TASK.md  HWPX_STACK_OPERATING_PLAN.md  HWPX_STACK_VALIDATION_2026-04-15.md  HWPX_STACK_VALIDATION_2026-04-16.md  README.md
src/cctv_daily_report/: __init__.py  cli.py  config.py  event_selector.py  images.py  mock_data.py  pipeline.py  renderer.py  sources.py  statistics.py  summarizer.py  text_utils.py  translator.py  vllm_client.py  vlm.py
src/hwpx/: __init__.py  authoring.py  body_patch.py  document.py  errors.py  evalplan_fill.py  experimental.py  fill_residue.py  form_fill.py  formfill_quality.py  guidance_scan.py  mutation_report.py  package.py  patch.py  table_patch.py  template_formfit.py  templates.py
templates/: report_template_blank.hwpx  report_template_filled.hwpx
tests/: agent_projection_corpus.py  generate_document_facade_surface.py  test_advanced_generators.py  test_agent_blueprint_contracts.py  test_agent_blueprint_dump.py  test_agent_blueprint_replay.py  test_agent_catalog.py  test_agent_cli.py  test_agent_commands.py  test_agent_contracts.py  test_agent_document.py  test_agent_mixed_form.py  test_agent_path_query.py  test_agent_story_commands.py  test_authoring_native_toc.py  test_authoring_profile_routing.py  test_authoring_profile_routing_oracle.py  test_authoring_quality_corpus.py  test_authoring_render_check.py  test_authoring_v2_block_validation.py  test_blind_eval_fixture.py  test_body_patch.py  test_builder_core.py  test_builder_plan_v2.py  test_builder_vertical_slice.py  test_byte_patch_identity.py  test_cell_line_spacing.py  test_comment_node_robustness.py  test_conformance.py  test_corpus_read_fidelity.py  test_corpus_toc_verify.py  test_coverage_promotion.py  test_coverage_targets.py  test_design_builder.py  test_deviations_registry.py  test_doc_diff.py  test_document_context_manager.py  test_document_facade_surface.py  test_document_formatting.py  test_document_plan.py  (+126 more)
tests/corpus/: run_agent_blueprint_dump_corpus.py
tests/data/: document_facade_surface.json
tests/evidence/: s068-render-measurement.json  s069-adjudication.json  s069-reviewer-a.json  s069-reviewer-b.json  s069-visual-qa-metrics.json
tests/fixtures/: agent_blueprint_hostile_cases.json  agent_blueprint_tasks.json  agent_projection_corpus.txt  agent_projection_stress_corpus.txt
tests/template_automation/: generate_fixtures.py  helpers.py  test_helpers.py  test_regression_suite.py
(+382 files in other folders)
