[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hwpx"
version = "1.9"
description = "Hancom HWPX 패키지를 로드하고 편집하기 위한 Python 유틸리티 모음"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "python-hwpx Maintainers" },
]
keywords = ["hwp", "hwpx", "hancom", "opc", "xml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9,<6",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "twine>=4.0",
    "pytest>=7.4",
]
test = [
    "pytest>=7.4",
    "pytest-cov>=5.0",
]
typecheck = [
    "mypy>=1.10",
    "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://github.com/airmang/python-hwpx"
Documentation = "https://github.com/airmang/python-hwpx/tree/main/docs"
Issues = "https://github.com/airmang/python-hwpx/issues"

[project.scripts]
hwpx-validate = "hwpx.tools.validator:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["hwpx*"]

[tool.setuptools.package-data]
"hwpx" = ["py.typed"]
"hwpx.tools" = ["_schemas/*.xsd"]
"hwpx.data" = ["Skeleton.hwpx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]


[tool.mypy]
python_version = "3.10"
files = ["src/hwpx/document.py", "src/hwpx/oxml/document.py"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hwpx.document", "hwpx.oxml.document"]
ignore_errors = true

[tool.pyright]
include = ["src/hwpx/document.py", "src/hwpx/oxml/document.py"]
pythonVersion = "3.10"
typeCheckingMode = "off"
reportMissingTypeStubs = false
