[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hwpx"
version = "2.9.0"
description = "한글 없이 HWPX 문서를 열고, 편집하고, 생성하고, 검증하는 Python 자동화 라이브러리"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [
    { name = "python-hwpx Maintainers" },
]
keywords = ["hwp", "hwpx", "hancom", "opc", "xml", "document-automation", "validation", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9,<6",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "twine>=4.0",
    "pytest>=7.4",
]
test = [
    "build>=1.0",
    "pytest>=7.4",
    "pytest-cov>=5.0",
]
typecheck = [
    "mypy>=1.10",
    "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://github.com/airmang/python-hwpx"
Documentation = "https://airmang.github.io/python-hwpx/"
Issues = "https://github.com/airmang/python-hwpx/issues"

[project.scripts]
hwpx-unpack = "hwpx.tools.archive_cli:unpack_main"
hwpx-pack = "hwpx.tools.archive_cli:pack_main"
hwpx-validate = "hwpx.tools.validator:main"
hwpx-validate-package = "hwpx.tools.package_validator:main"
hwpx-page-guard = "hwpx.tools.page_guard:main"
hwpx-analyze-template = "hwpx.tools.template_analyzer:main"
hwpx-text-extract = "hwpx.tools.text_extract_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["hwpx*"]

[tool.setuptools.package-data]
"hwpx" = ["py.typed"]
"hwpx.tools" = ["_schemas/*.xsd"]
"hwpx.data" = ["Skeleton.hwpx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]


[tool.mypy]
python_version = "3.10"
files = [
    "src/hwpx/document.py",
    "src/hwpx/oxml/document.py",
    "src/hwpx/opc/package.py",
    "src/hwpx/opc/relationships.py",
    "src/hwpx/tools/archive_cli.py",
    "src/hwpx/tools/package_validator.py",
    "src/hwpx/tools/page_guard.py",
    "src/hwpx/tools/template_analyzer.py",
    "src/hwpx/tools/text_extract_cli.py",
    "src/hwpx/tools/text_extractor.py",
    "tests/template_automation/helpers.py",
    "tests/template_automation/generate_fixtures.py",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["hwpx.document", "hwpx.oxml.document"]
ignore_errors = true

[tool.pyright]
# Keep basic pyright focused on OPC/tooling modules that currently pass
# without suppressing their real diagnostics.
include = [
    "src/hwpx/opc/package.py",
    "src/hwpx/opc/relationships.py",
    "src/hwpx/tools/archive_cli.py",
    "src/hwpx/tools/package_validator.py",
    "src/hwpx/tools/page_guard.py",
    "src/hwpx/tools/template_analyzer.py",
    "src/hwpx/tools/text_extract_cli.py",
    "src/hwpx/tools/text_extractor.py",
    "tests/template_automation/helpers.py",
    "tests/template_automation/generate_fixtures.py",
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
